@@ -23,7 +23,7 @@
         <version>85</version>
     </parent>
     <artifactId>commons-jexl3</artifactId>
-    <version>3.5.1-SNAPSHOT</version>
+    <version>3.6.0-SNAPSHOT</version>
     <name>Apache Commons JEXL</name>
     <description>Apache Commons JEXL is a library that facilitates the implementation of scripting features in
         applications and frameworks written in Java.</description>
@@ -77,8 +77,8 @@
         <commons.asm.version>9.8</commons.asm.version>
         <!-- Commons release plugin -->
         <commons.bc.version>3.5.0</commons.bc.version>
-        <commons.release.version>3.5.1</commons.release.version>
-        <commons.release.next>3.5.2</commons.release.next>
+        <commons.release.version>3.6.0</commons.release.version>
+        <commons.release.next>3.6.1</commons.release.next>
         <commons.rc.version>RC1</commons.rc.version>
         <commons.release.isDistModule>true</commons.release.isDistModule>
         <commons.distSvnStagingUrl>scm:svn:https://dist.apache.org/repos/dist/dev/commons/${commons.componentid}</commons.distSvnStagingUrl>
