@@ -27,22 +27,40 @@
         <author email="dev@commons.apache.org">Commons Developers</author>
     </properties>
     <body>
-        <release version="3.6.0" date="YYYY-MM-DD" description="This is a feature and maintenance release. Java 8 or later is required.">
-          <!-- FIX -->
+        <release version="3.6.0" date="YYYY-MM-DD"
+                 description="This is a feature and maintenance release. Java 8 or later is required.">
+            <!-- FIX -->
+            <action dev="henrib" type="fix" issue="JEXL-442" due-to="Xu Pengcheng">
+                Local variables are not resolved in interpolation string expression.
+            </action>
+            <action dev="henrib" type="fix" issue="JEXL-441" due-to="Xu Pengcheng">
+                Tokenization error if "\n" in template expression.
+            </action>
+            <action dev="henrib" type="fix" issue="JEXL-439" due-to="Xu Pengcheng">
+                When using reference capture, incorrect scoping when local variable redefines a captured symbol
+            </action>
             <action dev="henrib" type="fix" issue="JEXL-437" due-to="William Price">
                 Semicolons not actually optional between function calls on separate lines
             </action>
-          <action type="fix" dev="ggregory" due-to="Gary Gregory">oac....AbstractExecutor.initMarker(Class, String, Class...) throws IllegalArgumentException instead of Error.</action>
-          <action type="fix" dev="ggregory" due-to="Gary Gregory">Reuse BigInteger constants instead of creating new instances in org.apache.commons.jexl3.JexlArithmetic.toBigInteger(Object).</action>
-          <!-- ADD -->
+            <action type="fix" dev="ggregory" due-to="Gary Gregory">
+                oac....AbstractExecutor.initMarker(Class, String, Class...) throws IllegalArgumentException instead of Error.
+            </action>
+            <action type="fix" dev="ggregory" due-to="Gary Gregory">
+                Reuse BigInteger constants instead of creating new
+                instances in org.apache.commons.jexl3.JexlArithmetic.toBigInteger(Object).
+            </action>
+            <!-- ADD -->
             <action dev="henrib" type="add" issue="JEXL-440">
                 Switch statement &amp; expressions
             </action>
-          <!-- UPDATE -->
-          <action type="update" dev="ggregory" due-to="Gary Gregory, Dependabot">Bump org.apache.commons:commons-parent from 81 to 85 #344.</action>
+            <!-- UPDATE -->
+            <action type="update" dev="ggregory" due-to="Gary Gregory, Dependabot">Bump
+                org.apache.commons:commons-parent from 81 to 85 #344.
+            </action>
         </release>
-        <release version="3.5.0" date="2025-04-11" description="This is a feature and maintenance release. Java 8 or later is required.">
-          <!-- FIX -->
+        <release version="3.5.0" date="2025-04-11"
+                 description="This is a feature and maintenance release. Java 8 or later is required.">
+            <!-- FIX -->
             <action dev="henrib" type="fix" issue="JEXL-436" due-to="Vincent Bussol">
                 The increment (decrement) operator does not check for null operand
             </action>
@@ -71,7 +89,7 @@
               Replace NumberParser use of Locale.ENGLISH with Locale.ROOT.
             </action>
             <action type="fix" dev="ggregory" due-to="Gary Gregory">Pick up maven-antrun-plugin version from parent POM org.apache:apache.</action>
-          <!-- ADD -->
+            <!-- ADD -->
             <action dev="henrib" type="add" issue="JEXL-438" due-to="Yair Lenga">
                 Allow parser factory specification.
             </action>
