@@ -47,9 +47,13 @@ Switch / case statements and expressions have been added to JEXL.
 New Features in 3.6.0:
 ======================
 * JEXL-440:     Switch/case statement and expression
+
 Bugs Fixed in 3.6.0:
 ====================
-* JEXL-437:     Semicolons not actually optional between function calls on separate lines
+* JEXL-442:     Local variables are not resolved in interpolation string expression
+* JEXL-441:     Tokenization error if "\n" in template expression.
+* JEXL-439:     When using reference capture, incorrect scoping when local variable redefines a captured symbo
+* JEXL-437:     Semicolons actually not optional between function calls on separate lines
 
 
 ========================================================================================================================
